--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
       <p>
         <small
           >&copy; 2026 Gestor de Tareas | Desarrollado por
-          <a href="https:https://github.com/galvaradosd"
-            >Germán Alvarado</a
-          ></small
+          <a href="https://github.com/galvaradosd">Germán Alvarado</a></small
         >
       </p>
     </footer>
